src/objects/PR_Team_Employee__c.object
<CustomObject>
    <description>Project Team records for all employee, status will come from HR Data</description>
    <fields>
        <fullName>Added_By_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System field denoting that aproject was added by the employee</inlineHelpText>
        <label>Added By Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_Dates_Invalid__c</fullName>
        <description>This will show whether or not this PR Team record has dates that do not logically make sense</description>
        <formula>Date_Involvement_Ended__c &lt; Date_Involvement_Started__c</formula>
        <inlineHelpText>Is Date Involvement Ended before Date Involvement Started?</inlineHelpText>
        <label>Are Dates Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChkUniqueEmp__c</fullName>
        <label>ChkUniqueEmp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name_Editable__c</fullName>
        <description>Client Name of a project that is used when a user can&apos;t find it in the AECOM project database or it is a non-AECOM Project</description>
        <inlineHelpText>End-client name</inlineHelpText>
        <label>Client Name (Writable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>Auto-calculated based on linked project</description>
        <inlineHelpText>Name of Client Owner</inlineHelpText>
        <label>Client Name (Calculated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComputedEmployeeNumber__c</fullName>
        <formula>Employee__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComputedEmployeeNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComputedPersonId__c</fullName>
        <formula>EmployeeUser__r.PersonId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComputedPersonId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Involvement_Ended__c</fullName>
        <inlineHelpText>Date employee completed work on the project</inlineHelpText>
        <label>Date Involvement Ended (Writable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Involvement_Started__c</fullName>
        <inlineHelpText>Date employee started working on the project</inlineHelpText>
        <label>Date Involvement Started (Writable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent_for_Review__c</fullName>
        <description>Date/Time when this PR Team Employee was sent to CM Review</description>
        <label>Date Time Sent for Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the employee&apos;s role in the project.</inlineHelpText>
        <label>Role Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailAddressComputed__c</fullName>
        <formula>Employee__r.Email__c</formula>
        <label>EmailAddressComputed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <formula>Employee__r.Last_Name__c + &apos;, &apos; + Employee__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the employee</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PR_Team_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Team</description>
        <label>Employee</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>PRTeamnames</relationshipLabel>
        <relationshipName>Employee_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Sequence__c</fullName>
        <inlineHelpText>The sequence of this item inside of the project group (most important first)</inlineHelpText>
        <label>Group Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Hours from oracle</description>
        <label>Hours</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Locale__c</fullName>
        <description>The locale of the user that initially saves a profile part</description>
        <label>Initial Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City_Editable__c</fullName>
        <description>Project Location of a project that is used when a user can&apos;t find it in the AECOM project database or it is a non-AECOM Project</description>
        <inlineHelpText>City of other locality of project (not necessarily country where AECOM did the work)</inlineHelpText>
        <label>Location City (Writable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <formula>IF((LEN(Project_ID__c) &gt; 0), Project_ID__r.Project_City__c, IF ( LEN(Previous_Project_Part__r.Project_ID__c) &gt; 0, Previous_Project_Part__r.Project_ID__r.Project_City__c, Location_City_Editable__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated based on linked project</inlineHelpText>
        <label>Location City (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country_Editable__c</fullName>
        <inlineHelpText>Country of project (not necessarily country where AECOM did the work)</inlineHelpText>
        <label>Location Country (Writable)</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Overseas Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <formula>IF((LEN(Project_ID__c) &gt; 0), Project_ID__r.Project_Country__c, IF ( LEN(Previous_Project_Part__r.Project_ID__c) &gt; 0, Previous_Project_Part__r.Project_ID__r.Project_Country__c, TEXT(Location_Country_Editable__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated based on linked project</inlineHelpText>
        <label>Location Country (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State_Prov_Emirate_Editable__c</fullName>
        <inlineHelpText>State or province or UK county of project (not necessarily country where AECOM did the work)</inlineHelpText>
        <label>Location State/Prov/Emirate (Writable)</label>
        <picklist>
            <picklistValues>
                <fullName>Aargau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argyll and Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blaenau Gwent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_State_Prov_Emirate__c</fullName>
        <formula>IF((LEN(Project_ID__c) &gt; 0), Project_ID__r.Project_StateProvinceEmirate__c, IF ( LEN(Previous_Project_Part__r.Project_ID__c) &gt; 0, Previous_Project_Part__r.Project_ID__r.Project_StateProvinceEmirate__c, TEXT(Location_State_Prov_Emirate_Editable__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated based on linked project</inlineHelpText>
        <label>Location State/Province (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Project_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Project_Part</label>
        <referenceTo>PR_Team_Employee__c</referenceTo>
        <relationshipLabel>Previous Profile Project Parts</relationshipLabel>
        <relationshipName>Previous_Profile_Project_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_AECOM_Project__c</fullName>
        <formula>RecordType.Name == &apos;Non-AECOM Project&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this record a Non-AECOM Project?</inlineHelpText>
        <label>Non-AECOM Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Number__c</fullName>
        <formula>Project_ID__r.Oracle_Project_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_on_Resume__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to display this project on a generated resume</inlineHelpText>
        <label>Output on Resume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRStatusEmployee__c</fullName>
        <formula>IF( ISPICKVAL( Employee__r.Status__c ,&quot;Active&quot;) , &quot;Active&quot;,&quot;in Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Status Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Project_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Project_Part</label>
        <referenceTo>PR_Team_Employee__c</referenceTo>
        <relationshipLabel>Next Profile Project Parts</relationshipLabel>
        <relationshipName>Next_Profile_Project_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectSort__c</fullName>
        <formula>if(ISPICKVAL( Employee__r.Status__c , &apos;Active&apos;),  &apos;Active:  &apos; + Employee__r.Last_Name__c + &apos;, &apos; +  Employee__r.First_Name__c , &apos;Inactive:  &apos; +  Employee__r.Last_Name__c + &apos;, &apos; +  Employee__r.First_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <label>Project City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group_Editable__c</fullName>
        <description>The Group of a project that is used when a user can&apos;t find it in the AECOM project database or it is a non-AECOM Project</description>
        <inlineHelpText>Categorize the project (e.g., Bridges or Water)</inlineHelpText>
        <label>Project Group (Writable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <label>Project Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employees linked to this project and their role</description>
        <inlineHelpText>Lookup to Project</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>PR_Team_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name_Editable__c</fullName>
        <description>The name of a project that is used when a user can&apos;t find it in the AECOM project database or it is a non-AECOM Project</description>
        <inlineHelpText>The project name</inlineHelpText>
        <label>Project Name (Writable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>IF((LEN(Project_ID__c) &gt; 0), Project_ID__r.Name, IF ( LEN(Previous_Project_Part__r.Project_ID__c) &gt; 0, Previous_Project_Part__r.Project_ID__r.Name, Project_Name_Editable__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to Project</inlineHelpText>
        <label>Project Name (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number_Calculated__c</fullName>
        <formula>IF((LEN(Project_ID__c) &gt; 0), Project_ID__r.Oracle_Project_Number__c, IF ( LEN(Previous_Project_Part__r.Project_ID__c) &gt; 0, Previous_Project_Part__r.Project_ID__r.Oracle_Project_Number__c, Project_Number_Editable__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated based on linked project</inlineHelpText>
        <label>Project Number (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number_Editable__c</fullName>
        <description>Project Number of a project that is used when a user can&apos;t find it in the AECOM project database</description>
        <inlineHelpText>AECOM Oracle project number</inlineHelpText>
        <label>Project Number (Writable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <inlineHelpText>The role of the employee in the project</inlineHelpText>
        <label>Project Role</label>
        <picklist>
            <picklistValues>
                <fullName>3D Modeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Modeling Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Permitting Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Quality Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archaeologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect of Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural QA/QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADD Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADD Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capture Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineer in Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Affairs Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Modeling Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Programmer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Sequence__c</fullName>
        <label>Project Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resume_Link__c</fullName>
        <formula>Employee__r.Link_to_Resume__c</formula>
        <label>Resume Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Profile Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <formula>IF ( EmployeeUser__c =&quot;&quot;,&quot;&quot;,IF( $User.IsActive = TRUE, &quot;Active&quot;, &quot;Inactive&quot;))</formula>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Resume Part for Work History if Non-AECOM Project</inlineHelpText>
        <label>Work History Reference</label>
        <referenceTo>rs_Profile_Part__c</referenceTo>
        <relationshipLabel>Work History</relationshipLabel>
        <relationshipName>Work_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PR Team Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Client_Name__c</columns>
        <columns>EmployeeUser__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Group_Editable__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Team_with_Role</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Project_ID__c</columns>
        <columns>Emp_Name__c</columns>
        <columns>Employee__c</columns>
        <columns>PRStatusEmployee__c</columns>
        <columns>Project_Role__c</columns>
        <columns>ProjectSort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Team with Role</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Team_with_RolePIC</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Project_ID__c</columns>
        <columns>Emp_Name__c</columns>
        <columns>Employee__c</columns>
        <columns>PRStatusEmployee__c</columns>
        <columns>Project_Role__c</columns>
        <columns>ProjectSort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Role__c</field>
            <operation>contains</operation>
            <value>Prinicipal</value>
        </filters>
        <filters>
            <field>PRStatusEmployee__c</field>
            <operation>notEqual</operation>
            <value>in Active</value>
        </filters>
        <label>All Team with Role PIC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>PRTeamID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Team Employees</pluralLabel>
    <recordTypes>
        <fullName>AECOM_Project</fullName>
        <active>true</active>
        <label>AECOM Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_AECOM_Project</fullName>
        <active>true</active>
        <label>Non-AECOM Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Dates</fullName>
        <active>true</active>
        <description>Confirms that the project start date is before the project end date</description>
        <errorConditionFormula>Date_Involvement_Started__c &gt; Date_Involvement_Ended__c &amp;&amp; Next_Project_Part__c == null</errorConditionFormula>
        <errorMessage>Date involvement started must be before date involvement ended</errorMessage>
    </validationRules>
</CustomObject>